class,object,access modifiers,getter,setter,static, instance variables,class variables

--- a/OOPs.ipynb
+++ b/OOPs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXZFh4qLMlkkZcfS4ED0Jn",
+      "authorship_tag": "ABX9TyOT0KcsQAydOS5m/pqxItaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "id": "to8wivRCT5K7",
         "outputId": "9d76d734-a3ce-47d3-a44a-bd7dccc706be"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
         "id": "nIut_hkOVRhO",
         "outputId": "b1d654ea-7d9c-492f-fe30-710d1547642c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "id": "rhKOWxYUc5uc",
         "outputId": "e08383b2-bbd5-4223-8151-eb018eb85907"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "id": "QvVxBZbUdJ3Q",
         "outputId": "358199c5-7061-496a-f38b-88a8bc5a7776"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,6 +243,245 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Access Specifier\n",
+        "\n",
+        "All gthe variables and methods in python are by default public.Any instance variable in a class followed by the self keyword ie. self.var_name are public accessed\n"
+      ],
+      "metadata": {
+        "id": "paUCn5msrwBy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Employee:\n",
+        "  def __init__(self):\n",
+        "    self.name=\"Bindu\"   #public variable\n",
+        "a=Employee()\n",
+        "print(a.name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I-szT3Ze1SO8",
+        "outputId": "ab02b74c-8b76-4305-fbbe-79baf50c9850"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bindu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Private Access modifier\n",
+        "\n",
+        "A variable or a method should be considered private by prefixing its name with a double underscore(__).THis is known as a \"week internal use indicator\" and is is a convention only not a strict rule.\n",
+        "\n",
+        "Name mangling is a technique used to protect class-private and superclass-private attributed from being accidentally overwritten by subclasses\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SvqsiWYJ2BcD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Employee:\n",
+        "  def __init__(self):\n",
+        "    self.__name=\"Bindu\"   #private variable\n",
+        "a=Employee()\n",
+        "# print(a.name) can't be accessed directly\n",
+        "print(a._Employee__name) #can be accessed indirectly\n",
+        "print(a.__dir__())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mnbxs8Hb2fGa",
+        "outputId": "33c0c446-9b9d-4e18-8e2f-d6760e976b0f"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bindu\n",
+            "['_Employee__name', '__module__', '__init__', '__dict__', '__weakref__', '__doc__', '__new__', '__repr__', '__hash__', '__str__', '__getattribute__', '__setattr__', '__delattr__', '__lt__', '__le__', '__eq__', '__ne__', '__gt__', '__ge__', '__reduce_ex__', '__reduce__', '__subclasshook__', '__init_subclass__', '__format__', '__sizeof__', '__dir__', '__class__']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Protected Access Modifier\n",
+        "\n",
+        "\"protected\" is used to describe a memnber(i.e., a method or attribute) of a class that is intended to be accessed only by the class itself and its subclasses.The convention for indicating that a member is protectyed is to prefix its name with a single underscore(_)"
+      ],
+      "metadata": {
+        "id": "XrmR3S-n4ZIZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self):\n",
+        "    self._name=\"Bindu\"\n",
+        "  def _funName(self):\n",
+        "    return \"Code withBindu\"\n",
+        "class Subject(Student):\n",
+        "  pass\n",
+        "obj=Student()\n",
+        "obj1=Subject()\n",
+        "\n",
+        "print(obj._name)\n",
+        "print(obj._funName())\n",
+        "print(obj1._name)\n",
+        "print(obj1._funName())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s_w7new_5V4r",
+        "outputId": "d06b02ee-d429-4fbd-9ba7-87c834b93386"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bindu\n",
+            "Code withBindu\n",
+            "Bindu\n",
+            "Code withBindu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Static Methods\n",
+        "\n",
+        "static methods belong to a class rather than an instance of the class.They are defined using the @staticmethod decorator and do not have access to the instance of the class.They are called on the class itself,not on an instancee of the ca,lss."
+      ],
+      "metadata": {
+        "id": "TfS6fR8X631i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Math:\n",
+        "  def __init__(self,num):\n",
+        "    self.num=num\n",
+        "  def  addtonum(self,n):\n",
+        "    self.num=self.num+n\n",
+        "  @staticmethod\n",
+        "  def add(a,b):\n",
+        "    return a+b\n",
+        "a=Math(5)\n",
+        "print(a.num)\n",
+        "a.addtonum(4)\n",
+        "print(a.num)\n",
+        "print(Math.add(1,1))\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eYNfcFxv5jCP",
+        "outputId": "4627f92c-4823-4630-ea34-d9db6081cd67"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "9\n",
+            "2\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Class variables and Instance Variables"
+      ],
+      "metadata": {
+        "id": "fTjATvB4_21D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyClass:\n",
+        "  companyName=\"Amazon\" #class variable\n",
+        "  count=0   #class variable\n",
+        "  def __init__(self,value):\n",
+        "    self.value=value #instance variable\n",
+        "    MyClass.count+=1\n",
+        "  def show(self):\n",
+        "    print(f\"Value is {self.value} and coamny is {self.companyName}\")\n",
+        "a= MyClass(1)\n",
+        "a.companyName=\"FlipKart\"\n",
+        "a.show()\n",
+        "b=MyClass(2)\n",
+        "b.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LCUcziZz7oYz",
+        "outputId": "c37cadba-7367-4126-cd21-d8d71ae88c9f"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Value is 1 and coamny is FlipKart\n",
+            "Value is 2 and coamny is Amazon\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "OSnX40w_7qlc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
